Fix body child items shrinked on iOS/macOS devices

--- a/src/OnramperWidget/styles.module.css
+++ b/src/OnramperWidget/styles.module.css
@@ -91,6 +91,10 @@ components
     margin-top: var(--body-space-childs);
 }
 
+.body__child {
+    flex-shrink: 0;
+}
+
 
 .row-fields {
     display: flex;
